# roo_transport

./: BUILD  MODULE.bazel  README.md  library.json  library.properties
.github/workflows/: workflow.yml
examples/Benchmark/: Benchmark.ino
examples/Loopback/: Loopback.ino
examples/Messaging/Multiplexing/: Multiplexing.ino
examples/Messaging/Rpc/: Rpc.ino
examples/Messaging/Simple/: Simple.ino
examples/Packets/: Packets.ino
examples/ReliableSerial/Benchmark/: Benchmark.ino
examples/ReliableSerial/Loopback/: Loopback.ino
examples/Rpc/Asynchronous/: Asynchronous.ino
examples/Rpc/Serialization/: Serialization.ino
examples/Rpc/Simple/: Simple.ino
src/: roo_transport.h
src/roo_transport/: socket_input_stream.h  socket_output_stream.h
src/roo_transport/bidi_streaming/: singleton_socket.cpp  singleton_socket.h  singleton_socket_transport.cpp  singleton_socket_transport.h
src/roo_transport/link/: link.cpp  link.h  link_buffer_size.h  link_input_stream.cpp  link_input_stream.h  link_loopback.h  link_messaging.cpp  link_messaging.h  link_output_stream.cpp  link_output_stream.h  link_status.h  link_transport.cpp  link_transport.h
src/roo_transport/messaging/: message_transport.h  messaging.cpp  messaging.h  mux_messaging.cpp  mux_messaging.h
src/roo_transport/packets/: packet_receiver.h  packet_sender.h
test/: link_messaging_test.cpp  link_transport_test.cpp  packets_over_stream_test.cpp  serial_link_transport_test.cpp
test/helpers/: BUILD  link_loopback.cpp  link_loopback.h  noisy_output_stream.cpp  noisy_output_stream.h  rand.cpp  rand.h
(+114 files in other folders)
