module(name = "roo_transport", version = "1.0.0")

bazel_dep(name = "roo_testing", version = "1.1.4")
bazel_dep(name = "googletest", version = "1.17.0")

bazel_dep(name = "roo_collections", version = "1.3.1")
bazel_dep(name = "roo_io", version = "2.0.1")
bazel_dep(name = "roo_logging", version = "1.4.0")
bazel_dep(name = "roo_threads", version = "1.1.3")
