module(name = "roo_transport", version = "1.0.1")

bazel_dep(name = "roo_testing", version = "1.1.7")
bazel_dep(name = "googletest", version = "1.17.0")

bazel_dep(name = "roo_collections", version = "1.3.2")
bazel_dep(name = "roo_io", version = "2.0.2")
bazel_dep(name = "roo_logging", version = "1.4.2")
bazel_dep(name = "roo_threads", version = "1.1.5")
